Up memory available to Jetty since the PST Library can use a lot of RAM